2021-01-30  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* dv2dt.c, dt2dv.c, dtl.h, configure.ac:
	Show usage when dv2dt is executed without arguments.
	Show TeX Live version number and bug report address in usage.
	* Makefile.am, dtl.test:
	Add new tests.

2019-02-18  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* dt2dv.c: Expand buffer size.
	Thanks to @ngothan for a report by covscan.
	https://github.com/TeX-Live/texlive-source/issues/11

2015-07-31  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dt2dv.c: Fixed typo in program name ("dv2dt" => "dt2dv").
	* dv2dt.c: Backpointers are always signed.

2015-07-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Better dependencies for 'make check'.

2014-06-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Drop the obsolete ACLOCAL_AMFLAGS.

2013-06-28  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dt2dv.c, dv2dt.c: First include <config.h>.

2013-06-27  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dt2dv.c: Drop variable 'handler' (set but not used).

2012-12-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dt2dv.c: Drop unused variables (gcc-4.6 warning).

2012-10-17  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dt2dv.c, dv2dt.c, man2ps: Reduce TL/W32TeX diffs (from Akira).
	* Makefile.am: Use the kpathsea library.
	* configure.ac (KPSE_KPATHSEA_FLAGS): Adapt (drop [no-debug]).

	* Makefile.am: Add explicit dv2dt_SOURCES.
	Avoid use of deprecated INCLUDES.

2012-06-27  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dt2dv.c, dv2dt.c: Drop the problematic prototype for isatty(),
	already declared in <unistd.h> or <kpathsea/c-fopen.h>.
	Use binary mode for output files.
	From Akira Kakuto <kakuto@fuk.kindai.ac.jp> (W32TeX).

2010-05-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dt2dv.c, dv2dt.c (SET_BINARY): Remove casts to void.

2010-02-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (AM_CPPFLAGS): Remove '-DNO_DEBUG' ...
	* configure.ac: ... now added via KPSE_KPATHSEA_FLAGS.
