@@ -1,3 +1,8 @@
+2021-02-06  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* dv2dt.c, dt2dv.c, dtl.h:
+	Replace BUG_ADDRESS to PACKAGE_BUGREPORT.
+
 2021-01-30  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
 
 	* dv2dt.c, dt2dv.c, dtl.h, configure.ac:
